# shannon-mcp

./: .dockerignore  .gitignore  AGENTS_SDK_INTEGRATION_PLAN.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CLI_WRAPPER_README.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FASTMCP_COMMANDS_GUIDE.md  FINAL_STATUS.md  FRONTEND_IMPLEMENTATION_GUIDE.md  FUNCTIONAL_TESTING.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  LICENSE  MCP_API_FIX_SUMMARY.md  POSTGRESQL_MIGRATION.md  PROJECT_MANAGEMENT.md  README.md  SHANNON_MCP_SDK_GUIDE.md  STATUS.md  TESTING.md  USAGE.md  UV_MIGRATION_GUIDE.md  UV_MIGRATION_SUMMARY.md  debug_import.py  debug_init.py  debug_mcp_protocol.py  debug_wrapper.py  dev.sh  diagnose_server.py  docker-compose.yml  functional_test_client.py  functional_test_report.md  functional_test_results.json  ios-app-design.md  (+53 more)
.claude/agents/: ios-mcp-testing-project-prompt.md
.github/workflows/: ci.yml  e2e-tests.yml  release.yml
cli-tests/: README.md  run-all-tests.sh  test-agents.sh  test-find-claude-binary.sh  test-help.sh  test-list-tools.sh  test-resources.sh  test-session-lifecycle.sh
config/: production.yaml
docs/: API.md  ARCHITECTURE.md  PHASE_2_CORE_INTEGRATION.md  PHASE_3_ADVANCED_FEATURES.md  SDK_INTEGRATION_GUIDE.md  additional-agents-specification.md  claude-code-mcp-specification.md  complete-implementation-tasks.md  fastmcp-llms-full.txt  frontend-implementation-tasks.md  implementation-roadmap.md  missing-features-analysis.md  multi-agent-architecture.md  repomix-output-getAsterisk-claudia.md  websocket-implementation-tasks.md
docs/source/: conf.py  configuration.rst  index.rst  installation.rst  quickstart.rst
examples/: websocket_demo.py
frontend/: ClaudeCodeSession.tsx  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-tester/: README.md  package.json
frontend-tester/public/: index.html  manifest.json
frontend-tester/src/: App.tsx
frontend/src/: App.tsx  index.css
k8s/: deployment.yaml  ingress.yaml
migrations/: 001_sdk_integration.sql
nginx/: nginx.conf
scripts/: demo-full-stack.sh  generate_all_agents.py  migrate_agents_to_sdk.py  setup-frontend.sh  test_local.sh  test_sdk_integration.py
shannon-mcp-ios/: CLAUDE.md  PROJECT_COMPLETION_SUMMARY.md
shannon-mcp-ios/Config/: MyProject.entitlements  Shared.xcconfig
shannon-mcp-ios/ShannonMCPTester/: ShannonMCPTester.xctestplan  ShannonMCPTesterApp.swift
shannon-mcp-ios/ShannonMCPTester.xcodeproj/: project.pbxproj
shannon-mcp-ios/ShannonMCPTester.xcworkspace/: contents.xcworkspacedata
shannon-mcp-ios/ShannonMCPTesterPackage/: Package.swift
shannon-mcp-ios/ShannonMCPTesterUITests/: MyProjectUITests.swift
src/frontend/: README.md
src/shannon_mcp/: __init__.py  __main__.py  server.py  server_fastmcp.py  server_fastmcp_production.py  server_new.py  stdio_wrapper.py
test_output/run_20250802_135615/: test_results.json
test_output/run_20250802_135727/: test_results.json
test_output/run_20250802_135747/: test_results.json
test_output/run_20250802_135809/: coverage.json  junit-results.xml  report.html  test_results.json
test_output/run_20250802_140110/: coverage.json  junit-results.xml  report.html  test_results.json
test_output/run_20250802_140238/: coverage.json  junit-results.xml  report.html  (+1 more)
tests/: E2E_QUICK_REFERENCE.md  E2E_TEST_SUMMARY.md  __init__.py  conftest.py  test_binary_manager.py  test_e2e_integration.py  test_error_scenarios.py  test_server.py  test_server_standalone.py  test_session_manager.py  test_streaming.py
(+347 files in other folders)
