[tool.poetry]
name = "shannon-mcp"
version = "0.1.0"
description = "Claude Code MCP Server - A comprehensive MCP server for Claude Code CLI"
authors = ["Shannon MCP Team"]
readme = "README.md"
packages = [{include = "shannon_mcp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.0.0"
aiosqlite = "^0.19.0"
aiofiles = "^23.0.0"
watchdog = "^4.0.0"
zstandard = "^0.22.0"
click = "^8.1.0"
pydantic = "^2.0.0"
httpx = "^0.26.0"
psutil = "^5.9.0"
semantic-version = "^2.10.0"
json-stream = "^2.3.0"
pyyaml = "^6.0.0"
rich = "^13.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"

[tool.poetry.scripts]
shannon-mcp = "shannon_mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --asyncio-mode=auto"
testpaths = ["tests"]
