[tool.poetry]
name = "shannon-mcp"
version = "0.1.0"
description = "Claude Code MCP Server - A comprehensive MCP server for Claude Code CLI"
authors = ["Shannon MCP Team"]
readme = "README.md"
packages = [{include = "shannon_mcp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.0.0"
aiosqlite = "^0.19.0"
asyncpg = "^0.29.0"
aiofiles = "^23.0.0"
watchdog = "^4.0.0"
zstandard = "^0.22.0"
click = "^8.1.0"
pydantic = "^2.0.0"
httpx = "^0.27.0"
psutil = "^5.9.0"
semantic-version = "^2.10.0"
json-stream = "^2.3.0"
pyyaml = "^6.0.0"
rich = "^13.0.0"
python-dotenv = "^1.0.0"
structlog = "^24.0.0"
aiohttp = "^3.9.0"
packaging = "^24.0"
sentry-sdk = "^2.0.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-benchmark = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
isort = "^5.13.0"
pre-commit = "^3.3.0"

[tool.poetry.scripts]
shannon-mcp = "shannon_mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--asyncio-mode=auto",
    "--cov=shannon_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as performance benchmarks",
]

[tool.coverage.run]
source = ["src/shannon_mcp"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
